# dhtt_base

./: .gitignore  Citation.cff  README.md  config
cooking_test/dhtt_cooking/: README.md  package.xml  setup.cfg  setup.py
cooking_test/dhtt_cooking/dhtt_cooking/: dhtt_cooking.py  experiments.py
cooking_test/dhtt_cooking/launch/: cooking_test.launch.py
cooking_test/dhtt_cooking/test/: dhtt_cooking.py  test_dhtt_cooking_tree.py
cooking_test/dhtt_cooking/test/experiment_descriptions/: collect_ingredient.yaml  collect_no_conditions.yaml  get_banana_chopped.yaml  get_banana_chopped_in_blender.yaml  get_banana_in_blender.yaml  get_chopped_bread.yaml  get_cooked_pasta.yaml  get_fried_egg.yaml  get_ice_in_blender.yaml  get_lettuce_chopped.yaml  get_onion_chopped.yaml  get_plate.yaml  get_strawberry.yaml  get_strawberry_in_blender.yaml  get_toast.yaml  get_tomato_chopped.yaml  get_tomato_sauce.yaml  recipe_egg_toast.yaml  recipe_pasta_with_tomato_sauce.yaml  recipe_salad.yaml  recipe_smoothie.yaml  recipe_toast_with_tomato.yaml  toast_chopped_bread.yaml
cooking_test/dhtt_cooking/test/test_descriptions/: simple_and.yaml  test_cooking_execute.yaml  test_cooking_executepick.yaml  test_cooking_multiplemove.yaml  test_cooking_multiplemoveobject.yaml  test_cooking_two_orders_simple.yaml
cooking_test/dhtt_cooking/test/world_states/: world.yaml
cooking_test/dhtt_cooking_plugins/: CMakeLists.txt  package.xml  plugins.xml
cooking_test/dhtt_cooking_plugins/include/dhtt_cooking_plugins/: cooking_utils.hpp  dhtt_cooking_plugins.hpp  visibility_control.h
cooking_test/dhtt_cooking_plugins/src/: cooking_utils.cc  dhtt_cooking_plugins.cpp
cooking_test/dhtt_cooking_plugins/src/behaviors/: cooking_behavior.cc  cooking_execute_behavior.cc  cooking_interact_special_behavior.cc  cooking_move_behavior.cc  cooking_object_exists_behavior.cc  cooking_pick_behavior.cc  cooking_place_behavior.cc  cooking_plate_place_behavior.cc
dhtt/: CMakeLists.txt  package.xml  setup.cfg  setup.py
dhtt/include/dhtt/: utils.hpp
dhtt/include/dhtt/planning/: goitr_type.hpp
dhtt/include/dhtt/server/: communication_aggregator.hpp  goitr_base.hpp  goitr_type.hpp  main_server.hpp  sub_server.hpp
dhtt/include/dhtt/tree/: branch_type.hpp  node.hpp  node_type.hpp  potential_type.hpp
dhtt/include/dhtt/utils/: condition_utils.hpp  resource_utils.hpp
dhtt/launch/: start_dhtt_cooking.launch.py  start_server.launch.py
dhtt/robots/: pr2.yaml
dhtt/sample_tasks/: find.yaml  find_test.yaml  pick_place.yaml  pick_place_test.yaml  pick_two_things.yaml  pick_two_things_test.yaml
dhtt/scripts/: experiment_1.py  experiment_2.py  experiment_3.py  visualize_results.py
dhtt/src/: main.cpp  param_node.cpp  utils.cc
dhtt/src/planning/: goitr_type.cc
dhtt/src/server/: goitr_base.cc  goitr_type.cc  main_server.cc  sub_server.cc
dhtt/src/tree/: node.cc
dhtt/src/utils/: condition_utils.cc  resource_utils.cc
dhtt/tests/: test_add_remove.py  test_behavior_order.py  test_dynamic_changes.py  test_goitr_basic.py  test_pre_post.py
dhtt/tests/test_descriptions/: and_parent_or.yaml  and_parent_then.yaml  complex_tree.yaml  find_3_objects.yaml  or_parent_and.yaml  or_parent_then.yaml  simple_and.yaml  simple_or.yaml  simple_then.yaml  test_1.yaml  test_simple.yaml  test_simple_goitr.yaml  then_parent_and.yaml  then_parent_or.yaml
dhtt/tests/test_descriptions/pre_post/: and_no_problem.yaml  and_parent_or_conditions.yaml  and_parent_then_conditions.yaml  and_problem_up_tree.yaml  and_problem_with_child_order.yaml  complex_tree.yaml  or_no_problem.yaml  or_parent_and_conditions.yaml  or_parent_then_conditions.yaml  or_problem_up_tree.yaml  or_problem_with_child_order.yaml  simple_and_duplicate_conditions.yaml  simple_and_unique_conditions.yaml  simple_or_duplicate_conditions.yaml  simple_or_unique_conditions.yaml  simple_then_leading_conditions.yaml  simple_then_unique_conditions.yaml  test_can_add_multi_level.yaml  test_can_add_multi_level_or.yaml  test_can_remove_multi_level.yaml  test_can_remove_multi_level_or.yaml  then_no_problem.yaml  then_parent_and_conditions.yaml  then_parent_and_conditions_leading.yaml  then_parent_or_conditions.yaml  then_parent_or_conditions_leading.yaml  then_problem_up_tree.yaml
dhtt/tests/test_world_states/: world_1.yaml
dhtt_plugins/: CMakeLists.txt  package.xml  plugins.xml
dhtt_plugins/include/dhtt_plugins/: dhtt_plugins.hpp  visibility_control.h
dhtt_plugins/include/dhtt_plugins/behaviors/: action_type.hpp  cooking_behavior.hpp  cooking_execute_behavior.hpp  cooking_interact_special_behavior.hpp  cooking_move_behavior.hpp  cooking_object_exists_behavior.hpp  cooking_pick_behavior.hpp  cooking_place_behavior.hpp  cooking_plate_place_behavior.hpp  defer_behavior.hpp  dummy_behavior.hpp  move_behavior.hpp  pick_behavior.hpp  place_behavior.hpp  test_behavior.hpp
dhtt_plugins/include/dhtt_plugins/goitrs/: find_goitr.hpp  goitr_test.hpp
dhtt_plugins/src/: dhtt_plugins.cpp
dhtt_plugins/src/behaviors/: action_type.cc  cooking_behavior.cc  cooking_execute_behavior.cc  cooking_interact_special_behavior.cc  cooking_move_behavior.cc  cooking_object_exists_behavior.cc  cooking_pick_behavior.cc  cooking_place_behavior.cc  cooking_plate_place_behavior.cc  dummy_behavior.cc  move_behavior.cc  pick_behavior.cc  place_behavior.cc  test_behavior.cc
dhtt_plugins/src/goitrs/: find_goitr.cc  goitr_test.cc
dhtt_plugins/src/potentials/: efficiency_potential.cc  resource_potential.cc  test_potential.cc
dhtt_plugins/src/tasks/: and_behavior.cc  or_behavior.cc  root_behavior.cc  then_behavior.cc
dhtt_plugins/src/tree/: ptr_branch.cc
dhtt_plugins/test/: potential_test.cpp
dhtt_reorder/: CMakeLists.txt  package.xml  plugins.xml  setup.cfg  setup.py
dhtt_reorder/dhtt_reorder/: dHTT_reorder.py
dhtt_reorder/include/dhtt_reorder/: dhtt_reorder.hpp  experiment_moveit.hpp
dhtt_reorder/launch/: kortex_launch.py
dhtt_reorder/src/: dhtt_reorder.cpp  experiment_moveit.cpp
dhtt_reorder/test/: test_reorder.py  test_reorder_dHTT.py
dhtt_reorder/test/yaml/: complex_tree.yaml  exampleABCD.yaml
(+1243 files in other folders)
