<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dhtt_plugins</name>
  <version>0.0.0</version>
  <description>Collection of default plugins for the dHTT package that describe the basic functionality of the default task nodes, the action behavior template, the default Branches, the default Potentials, etc. To make more plugins create a new package following the template dhtt_plugins provides.</description>
  <maintainer email="tbecker@unr.edu">Tyler J Becker</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>dhtt</depend>
  <depend>dhtt_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
