<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dhtt_cooking</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="williampeterson@unr.edu">stosh</maintainer>
  <license>TODO: License declaration</license>

  <depend>cooking_zoo</depend>
  <depend>dhtt_msgs</depend>
  <depend>dhtt_cooking_msgs</depend>
  <depend>dhtt</depend>

  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
