<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dhtt_cooking_plugins</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tylerjohnbecker@gmail.com">tylerjbecker</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>ament_cmake_ros</depend>
  <depend>rclcpp</depend>
  <depend>dhtt</depend>
  <depend>dhtt_msgs</depend>
  <depend>dhtt_cooking_msgs</depend>
  <depend>dhtt_plugins</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
